feat: inject serve event into stub transformer.