@@ -15,14 +15,13 @@
  */
 package com.github.tomakehurst.wiremock.recording;
 
-import static java.util.stream.Collectors.toList;
-
+import com.github.tomakehurst.wiremock.common.Pair;
 import com.github.tomakehurst.wiremock.matching.RequestPattern;
+import com.github.tomakehurst.wiremock.stubbing.ServeEvent;
 import com.github.tomakehurst.wiremock.stubbing.StubMapping;
 import com.google.common.collect.HashMultiset;
 import com.google.common.collect.Multiset;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
 
 /**
@@ -59,10 +58,10 @@ public class SnapshotStubMappingPostProcessor {
     this.bodyExtractor = bodyExtractor;
   }
 
-  public List<StubMapping> process(Collection<StubMapping> stubMappings) {
+  public List<StubMapping> process(List<Pair<ServeEvent, StubMapping>> serveEventsToStubMappings) {
     // 1. Run any applicable StubMappingTransformers against the stub mappings.
     List<StubMapping> transformedStubMappings =
-        stubMappings.stream().map(transformerRunner).collect(toList());
+        serveEventsToStubMappings.stream().map(transformerRunner).toList();
 
     // 2. Detect duplicate requests and either discard them or turn them into scenarios.
     Multiset<RequestPattern> requestCounts = HashMultiset.create();
